[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-cedrus"
version = "0.0.6"
description = "Extension package for PsychoPy which adds support for various hardware devices by the Cedrus Corporation."
readme = "README.md"
requires-python = ">= 3.7"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
  { name = "Jon Peirce", email = "jon@opensceincetools.org" },
  { name = "Matthew Cutone", email = "mcutone@opensceincetools.org" },
  { name = "Todd Parsons", email = "todd@opensceincetools.org" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://psychopy.github.io/psychopy-cedrus"
urls.changelog = "https://github.com/psychopy/psychopy-cedrus/blob/main/CHANGELOG.txt"

[project.optional-dependencies]
# dependencies for building the docs
docs = [
  "psychopy",
  "sphinx",
  "furo",
]
# dependencies for running the test suite
tests = [
  "psychopy",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["",]

[tool.setuptools.package-data]
"*" = ["*.png",]

[project.entry-points."psychopy.experiment.components"]
# old Component
CedrusButtonBoxComponent = "psychopy_cedrus.components.cedrusBox:CedrusButtonBoxComponent"
# new backends
RipondaButtonBoxBackend = "psychopy_cedrus.components.riponda:RipondaButtonBoxBackend"
RBButtonBoxBackend = "psychopy_cedrus.components.rb:RBButtonBoxBackend"

[project.entry-points."psychopy.hardware.cedrus"]
# RB series
RB = "psychopy_cedrus.cedrus:RB"
RBPhotodiodeGroup = "psychopy_cedrus.riponda:RipondaPhotodiodeGroup"
RBButtonGroup = "psychopy_cedrus.riponda:RipondaButtonGroup"
RBVoicekey = "psychopy_cedrus.riponda:RipondaVoicekey"
# Riponda series
Riponda = "psychopy_cedrus.riponda:Riponda"
RipondaPhotodiodeGroup = "psychopy_cedrus.riponda:RipondaPhotodiodeGroup"
RipondaButtonGroup = "psychopy_cedrus.riponda:RipondaButtonGroup"
RipondaVoicekey = "psychopy_cedrus.riponda:RipondaVoicekey"
